--- a/Hypotheis_Testing.ipynb
+++ b/Hypotheis_Testing.ipynb
@@ -112,8 +112,8 @@
    ],
    "source": [
     "# Read in the SAR img\n",
-    "# In the filename, change 'vv' to 'vh' can \n",
-    "# import SAR image of diifferent polarimetry channel\n",
+    "# In the filename, change 'vv' to 'vh' to import\n",
+    "# SAR image of diifferent polarimetry channel\n",
     "\n",
     "imgfile = Path('s1a_vv_20191004_zurich.tif')\n",
     "\n",
